# web-suffer-back

./: .env.example  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cosmic-ray.toml  pyproject.toml
backend/docs/: SPEC.md
backend/src/mood_tracker/: app_factory.py  config.py  log_config.py  main.py
backend/src/mood_tracker/contexts/auth/application/: exceptions.py
backend/src/mood_tracker/contexts/auth/domain/: exceptions.py
backend/src/mood_tracker/shared/application/: exceptions.py
backend/src/mood_tracker/shared/domain/value_objects/: __init__.py  user_id.py
backend/src/tests/unit/contexts/auth/: test_email.py  test_password_hash.py  test_token.py  test_token_pair.py
backend/src/tests/unit/contexts/tasks/: test_submission_file.py  test_submission_status.py
backend/src/web_suffer/: app_factory.py  main.py
backend/src/web_suffer/contexts/auth/application/: exceptions.py
backend/src/web_suffer/contexts/auth/domain/: exceptions.py  types.py
backend/src/web_suffer/contexts/tasks/application/: exceptions.py
backend/src/web_suffer/contexts/tasks/domain/: types.py
backend/src/web_suffer/infrastructure/: config.py  constants.py  log_config.py
backend/src/web_suffer/infrastructure/di/: container.py
backend/src/web_suffer/infrastructure/di/providers/: __init__.py  superadmin_seeder_provider.py
backend/src/web_suffer/infrastructure/seeders/: superadmin_seeder.py
backend/src/web_suffer/presentation/: exceptions.py
backend/src/web_suffer/presentation/api/: app_factory.py  setup_exception_handlers.py  setup_middleware.py  setup_routers.py
backend/src/web_suffer/presentation/api/adapters/: fastapi_response_adapter.py
backend/src/web_suffer/presentation/api/exception_handlers/: auth.py  shared.py  task.py
backend/src/web_suffer/presentation/api/middleware/: logging_middleware.py
backend/src/web_suffer/shared/domain/: exceptions.py
backend/src/web_suffer/shared/entities/: base_entity.py
backend/src/web_suffer/shared/infrastructure/: exceptions.py
frontend/: .dockerignore  .eslintcache  env.d.ts  (+8 more)
(+243 files in other folders)
